# powerglide

./: .gitignore  README.md  powerglide.toml  pyproject.toml  requirements.txt
docs/: UserHandbook.md  allCommands.md  logChanged.md  mathExplained.md
powerglide/: __init__.py  __main__.py
powerglide/cli/: body.py  explain.py  gym.py  main.py  utils.py  water.py
powerglide/core/: config.py  constants.py  math_engine.py  parser.py
powerglide/dashboard/: app.py  charts.py
powerglide/database/: db.py  queries_analytics.py  queries_body.py  queries_exercises.py  queries_gym.py  queries_water.py  seed.py
powerglide/database/migrations/: 001_initial.sql  002_add_time_seconds.sql
tests/: __init__.py  test_cli_explain.py  test_database.py  test_explain_logic.py  test_math_engine.py  test_parser.py
