[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerglide"
version = "0.1.0"
description = "Local-only hybrid CLI/GUI gym and canoeing performance tracker for C1 sprint paddlers"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "thefuzz>=0.22.0",
    "python-Levenshtein>=0.25.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
powerglide = "powerglide.cli.main:app"

[tool.setuptools.packages.find]
include = ["powerglide*"]
